--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=divice-width">
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <title>練習10</title>
   </head>
