--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>練習10</title>
   </head>
   <body>
-    
+    <header>
+      <hl>header</hl>
+    </header>
+    <section>
+      <hl>main</hl>
+    </section>
+      <aside>
+        <hl>side1</hl>
+      </aside>
+      <aside>
+        <hl>side2</hl>
+      </aside>
+      <footer>
+        <hl>footer</hl>
+      </footer>
+
   </body>
 </html>
