--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <section>
       <hl>main</hl>
     </section>
+    <div id="side">
       <aside>
         <hl>side1</hl>
       </aside>
       <aside>
         <hl>side2</hl>
       </aside>
+      </div>
       <footer>
         <hl>footer</hl>
       </footer>
