--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <hl>header</hl>
     </header>
+    <div id="main">
     <section>
       <hl>main</hl>
     </section>
@@ -21,6 +22,7 @@
       <aside>
         <hl>side2</hl>
       </aside>
+      </div>
       </div>
       <footer>
         <hl>footer</hl>
